--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -67,14 +67,17 @@
         </init-param>-->
         <load-on-startup>1</load-on-startup>
     </servlet>
-    <servlet-mapping>
-        <servlet-name>appServlet</servlet-name>
-        <url-pattern>*.htm</url-pattern>
-    </servlet-mapping>
+
     <servlet-mapping>
         <servlet-name>appServlet</servlet-name>
         <url-pattern>*.html</url-pattern>
+
+    </servlet-mapping><servlet-mapping>
+        <servlet-name>appServlet</servlet-name>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
+
+
 
     <servlet>
         <servlet-name>staticResource</servlet-name>
