--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -4,3 +4,9 @@ DB_H2DB_URL=jdbc:h2:file:/Users/maple/developer/spring-learning/test-spring-mvc/
 #DB_H2DB_URL=jdbc:h2:mem:DBName;DB_CLOSE_DELAY=-1
 DB_H2DB_USER=root
 DB_H2DB_PASSWD=123456
+
+
+# event config
+kafka_topic=order_1.0.0_event
+kafka_producer_host=127.0.0.1:9092
+kafka_tid_prefix=order_1.0.0
