--- a/pom.xml
+++ b/pom.xml
@@ -298,6 +298,14 @@
         </dependency>
 
 
+        <!--event bus-->
+        <dependency>
+            <groupId>com.today</groupId>
+            <artifactId>event-bus_2.12</artifactId>
+            <version>2.0.4</version>
+        </dependency>
+
+
     </dependencies>
 
 
