--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,6 +1,6 @@
 # 存在于内存中
 #DB_H2DB_URL=jdbc:h2:file:~/.h2/dapeng_apidoc_db;AUTO_SERVER=TRUE;DB_CLOSE_DELAY=-1
-DB_H2DB_URL=jdbc:h2:file:/Users/maple/developer/spring-learning/test-spring-mvc/h2/test_db;AUTO_SERVER=TRUE;DB_CLOSE_DELAY=-1
+DB_H2DB_URL=jdbc:h2:file:F:/spring-mvc-source/h2/test_db;AUTO_SERVER=TRUE;DB_CLOSE_DELAY=-1
 #DB_H2DB_URL=jdbc:h2:mem:DBName;DB_CLOSE_DELAY=-1
 DB_H2DB_USER=root
 DB_H2DB_PASSWD=123456
