--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -55,16 +55,15 @@
     </filter-mapping>
 
 
-
     <!-- servlet 分发器 -->
     <servlet>
         <servlet-name>appServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <!--<init-param>
+        <init-param>
             <param-name>contextConfigLocation</param-name>
-            &lt;!&ndash;默认&ndash;&gt;
-            <param-value></param-value>
-        </init-param>-->
+            <!--默认-->
+            <param-value>classpath:spring-mvc.xml</param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
 
@@ -72,11 +71,11 @@
         <servlet-name>appServlet</servlet-name>
         <url-pattern>*.html</url-pattern>
 
-    </servlet-mapping><servlet-mapping>
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>appServlet</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
-
 
 
     <servlet>
