--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <logback-version>1.1.3</logback-version>
         <org.slf4j-version>1.7.25</org.slf4j-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <scala.version>2.12.4</scala.version>
     </properties>
 
     <dependencies>
@@ -312,6 +313,44 @@
     <build>
         <finalName>ROOT</finalName>
         <plugins>
+
+
+            <!--支持对scala的编译-->
+            <plugin>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+                <version>3.2.2</version>
+                <executions>
+                    <execution>
+                        <id>scala-compile-first</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>scala-test-compile</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <scalaVersion>${scala.version}</scalaVersion>
+                    <args>
+                        <arg>-feature</arg>
+                        <arg>-deprecation</arg>
+                        <arg>-language:postfixOps</arg>
+                        <arg>-language:existentials</arg>
+                    </args>
+                </configuration>
+            </plugin>
+
+
+
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
