--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <org.slf4j-version>1.7.25</org.slf4j-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <scala.version>2.12.4</scala.version>
+        <tomcat.version>8.5.31</tomcat.version>
     </properties>
 
     <dependencies>
@@ -114,7 +115,7 @@
         <!--spring security end -->
 
         <!-- Servlet -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-servlet-api</artifactId>
             <version>7.0.30</version>
@@ -126,9 +127,9 @@
             <artifactId>jsp-api</artifactId>
             <version>2.1</version>
             <scope>provided</scope>
-        </dependency>
+        </dependency>-->
 
-        <dependency>
+        <!--<dependency>
             <groupId>javax.servlet.jsp.jstl</groupId>
             <artifactId>jstl-api</artifactId>
             <version>1.2</version>
@@ -138,9 +139,9 @@
                     <artifactId>servlet-api</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
+        </dependency>-->
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.glassfish.web</groupId>
             <artifactId>jstl-impl</artifactId>
             <version>1.2</version>
@@ -150,7 +151,7 @@
                     <artifactId>servlet-api</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.jdom</groupId>
             <artifactId>jdom</artifactId>
@@ -247,6 +248,12 @@
             <version>2.8.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.today</groupId>
+            <artifactId>goods-api_2.12</artifactId>
+            <version>0.1.1-SNAPSHOT</version>
+        </dependency>
+
         <!-- 阿里云OSS服务 -->
         <!-- <dependency>
              <groupId>com.aliyun.oss</groupId>
@@ -298,6 +305,36 @@
             <groupId>com.today</groupId>
             <artifactId>event-bus_2.12</artifactId>
             <version>2.0.4</version>
+        </dependency>
+
+
+
+
+
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>${tomcat.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+            <version>${tomcat.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jasper</artifactId>
+            <version>${tomcat.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jasper-el</artifactId>
+            <version>${tomcat.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jsp-api</artifactId>
+            <version>${tomcat.version}</version>
         </dependency>
 
 
