--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <packaging>war</packaging>
     <properties>
         <java.version>1.8</java.version>
-        <spring.version>4.3.5.RELEASE</spring.version>
+        <spring.version>4.3.7.RELEASE</spring.version>
         <spring-security.version>4.2.1.RELEASE</spring-security.version>
         <com.fasterxml.jackson.version>2.9.5</com.fasterxml.jackson.version>
         <logback-version>1.1.3</logback-version>
@@ -235,6 +235,12 @@
              <version>3.4.1</version>
          </dependency>-->
 
+        <dependency>
+            <groupId>com.today</groupId>
+            <artifactId>test-kafka</artifactId>
+            <version>0.1-SNAPSHOT</version>
+        </dependency>
+
 
         <!--spring-test -->
         <dependency>
@@ -248,7 +254,13 @@
         <dependency>
             <groupId>com.today</groupId>
             <artifactId>event-bus_2.12</artifactId>
-            <version>2.1.1</version>
+            <version>2.1.1-RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
         </dependency>
 
     </dependencies>
