--- a/pom.xml
+++ b/pom.xml
@@ -303,7 +303,22 @@
         <dependency>
             <groupId>com.today</groupId>
             <artifactId>event-bus_2.12</artifactId>
-            <version>2.0.5</version>
+            <!--<version>2.0.5</version>-->
+            <version>3.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.today</groupId>
+            <artifactId>event-bus_2.12</artifactId>
+            <!--<version>2.0.5</version>-->
+            <version>3.0.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.github.wangzaixiang/scala-sql -->
+        <dependency>
+            <groupId>com.github.wangzaixiang</groupId>
+            <artifactId>scala-sql_2.12</artifactId>
+            <version>2.0.7</version>
         </dependency>
 
 
@@ -347,8 +362,6 @@
                     </args>
                 </configuration>
             </plugin>
-
-
 
 
             <plugin>
